Updated the img for the main cards in wolong.html. Added the respective images in wolong/img/.

--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -328,7 +328,7 @@
             top row 
             ========== -->
             <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
-                <img src="./img/basics_icon.png" alt=""> 
+                <img src="./img/equipment_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">Equipment</span>
             </div>
 
@@ -368,7 +368,7 @@
             top row 
             ========== -->
             <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
-                <img src="./img/basics_icon.png" alt=""> 
+                <img src="./img/world_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">World</span>
             </div>
 
@@ -405,7 +405,7 @@
             top row 
             ========== -->
             <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
-                <img src="./img/basics_icon.png" alt=""> 
+                <img src="./img/tools_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">Tools & Resources</span>
             </div>
 
@@ -445,7 +445,7 @@
             top row 
             ========== -->
             <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
-                <img src="./img/basics_icon.png" alt=""> 
+                <img src="./img/online_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">Online</span>
             </div>
 
