Added more color templates to tailwind.config.js. Added more content to wolong, and martial_arts .html files. Added more content to enemies, and martial_arts_temp .txt files. Added new images in wolong/img/ and martial_arts/img/.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -266,6 +266,29 @@
 
 
     <!-- ========== ========== ==========
+    Description
+    ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Description</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="place-self-start px-4 lg:px-0 text-slate-300 text-xl leading-relaxed">Martial Arts are skills that the 
+                player can activate during combat by pressing (RB+X and RB+Y) / (R1+Square and R1+Triangle). Every weapon comes 
+                with at least 1 Martial Art, with the maximum being 2. Only weapons that are 3 Star Rarity or higher can have 2 
+                Martial Arts, 1 Star and 2 Star Rarity weapons cannot have 2 Martial Arts. Martial Arts are tied to the weapon, 
+                and cannot be changed or removed. Unique Martial Art Skills only drop on unique weapons, which can be farmed from
+                bosses or reaching "Sworn Brother" with NPCs. Unique Martial Arts can drop on all Rarities.
+                <br><br>
+
+                There are a total of 76 Martial Arts, 26 of which are Unique Martial Arts Skills. Below are tables grouping all
+                the Martial Arts by weapon category. <span class="text-boss-skill">Unique Martial Arts are colored orange.</span>
+            </p>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ==========
     Straight Sabre Martial Arts
     ========== ========== ========== -->
     <section id="straight_sabre" class="w-full my-12 lg:px-0 flex flex-col items-center">
@@ -324,7 +347,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Gouging Star</span>
-                        <img class="object-none" src="./img/gouging_star.png" alt="">
+                        <img class="object-none" src="./img/gouging_star_2.png" alt="">
                     </div></td>
                     <td>376</td>
                     <td>
@@ -335,7 +358,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Ill Wind</span>
-                        <img class="object-none" src="./img/ill_wind.png" alt="">
+                        <img class="object-none" src="./img/ill_wind_2.png" alt="">
                     </div></td>
                     <td>376</td>
                     <td>
