--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -253,7 +253,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-between bg-medium-peach">
                 <img src="./img/basics_icon.png" alt=""> 
                 <span class="text-2xl text-stone-900">Basics</span>
             </div>
@@ -290,7 +290,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-between bg-medium-peach">
                 <img src="./img/combat_icon.png" alt="">
                 <span class=" text-2xl text-stone-900">Combat</span>
             </div>
@@ -327,7 +327,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-between bg-medium-peach">
                 <img src="./img/equipment_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">Equipment</span>
             </div>
@@ -367,7 +367,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-between bg-medium-peach">
                 <img src="./img/world_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">World</span>
             </div>
@@ -404,7 +404,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-between bg-medium-peach">
                 <img src="./img/tools_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">Tools & Resources</span>
             </div>
@@ -444,7 +444,7 @@
             <!-- ========== 
             top row 
             ========== -->
-            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-peach">
+            <div class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-between bg-medium-peach">
                 <img src="./img/online_icon.png" alt=""> 
                 <span class=" text-2xl text-stone-900">Online</span>
             </div>
