Added more content to martial_arts.html. Removed gouging_star_2, and ill_wind_2 .png files.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -273,7 +273,7 @@
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Description</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
-            <p class="place-self-start px-4 lg:px-0 text-slate-300 text-xl leading-relaxed">Martial Arts are skills that the 
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">Martial Arts are skills that the 
                 player can activate during combat by pressing (RB+X and RB+Y) / (R1+Square and R1+Triangle). Every weapon comes 
                 with at least 1 Martial Art, with the maximum being 2. Only weapons that are 3 Star Rarity or higher can have 2 
                 Martial Arts, 1 Star and 2 Star Rarity weapons cannot have 2 Martial Arts. Martial Arts are tied to the weapon, 
@@ -347,7 +347,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Gouging Star</span>
-                        <img class="object-none" src="./img/gouging_star_2.png" alt="">
+                        <img class="object-none" src="./img/gouging_star.png" alt="">
                     </div></td>
                     <td>376</td>
                     <td>
@@ -358,7 +358,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Ill Wind</span>
-                        <img class="object-none" src="./img/ill_wind_2.png" alt="">
+                        <img class="object-none" src="./img/ill_wind.png" alt="">
                     </div></td>
                     <td>376</td>
                     <td>
@@ -1087,7 +1087,10 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080, LOLSAN, Oninomiru</span>
+                <span>LiuKang1080, ShinSeiKen, SacredForce, Ocean Machine, Oninomiru, LOLSAN</span>
+                <span>Link to the Wo Long: Fallen Dynasty Data Doc by ShinSeiKen: <a class="text-sky-500 font-bold" 
+                    href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQHvS8111EBIv01FqnOnJJ5Iv6HUsicqnlu-l9pVXoOHLBKOfMD7YGdjJnTMcb_LTDuc_Ux9ATrJfNZ/pubhtml#"
+                    target="_blank" rel="noopener noreferrer">here</a></span>
                 <span>Link to the Martial Arts google doc: <a class="text-sky-500 font-bold" 
                     href="https://docs.google.com/spreadsheets/d/1b4IWj0avgNtueRyFFWa_vwOj1JxX93pHqDQEJcJ2Vgw/edit#gid=0" 
                     target="_blank" rel="noopener noreferrer">here</a></span>
