Added more content to martial_arts.html.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -281,6 +281,16 @@
                 bosses or reaching "Sworn Brother" with NPCs. Unique Martial Arts can drop on all Rarities.
                 <br><br>
 
+                Weight / Agility affects the Spirit cost of Martial Arts. The standard baseline is B Agility. All numbers are
+                obtained with B Agility. <br>
+            </p>
+            <ul class="place-self-start px-4 2xl:px-0 list-disc list-inside text-slate-300 text-xl">
+                <li>A Agility: -20% Spirit cost.</li>
+                <li>B Agility: +/- 0% Spirit cost. Baseline.</li>
+                <li>C Agility: +40% Spirit cost.</li>
+                <li>D Agility: +200% Spirit cost.</li>
+            </ul>
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 There are a total of 76 Martial Arts, 26 of which are Unique Martial Arts Skills. Below are tables grouping all
                 the Martial Arts by weapon category. <span class="text-boss-skill">Unique Martial Arts are colored orange.</span>
             </p>
