Added more content to enemies, martial_arts_temp, and martial_arts .txt files. Added more content to martial_arts.html. Fixed the sorting functions in martial_arts.js. Added the respective images in martial_arts/img/.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -308,6 +308,7 @@
             <!-- ==========
             section header
             ========== -->
+            <img src="./img/straight_sabre_logo.png" alt="">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Straight Sabre Martial Arts</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -319,7 +320,7 @@
                 Header 
                 ========== -->
                 <tr>
-                    <th onclick="sort_table(0, this)">
+                    <th onclick="sort_table(0, this)" class="cursor-pointer">
                         <div class="flex items-center gap-2">
                             <span>Martial Art</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
@@ -327,7 +328,7 @@
                             </svg>
                         </div>
                     </th>
-                    <th onclick="sort_table(1, this)">
+                    <th onclick="sort_table(1, this)" class="cursor-pointer">
                         <div class="flex items-center gap-2">
                             <div class="flex flex-col justify-center">
                                 <span>Spirit Cost</span>
@@ -436,6 +437,26 @@
                         Step forward while rotating the body to perform a frontward slash.
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Lightspeed Gust</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Violet Sandstorm</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
@@ -451,6 +472,7 @@
             <!-- ==========
             section header
             ========== -->
+            <img src="./img/sword_logo.png" alt="">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Sword Martial Arts</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -569,6 +591,56 @@
                         Step forward while rotating the body to perform a frontward slash.
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Cosmic Syzygy</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Dawning Sky</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Starlight Blade</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Sun Piercer</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Sword of Chaos</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
@@ -584,6 +656,7 @@
             <!-- ==========
             section header
             ========== -->
+            <img src="./img/curved_sabre_logo.png" alt="">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Curved Sabre Martial Arts</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -643,6 +716,16 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
+                        <span>Ill Wind</span>
+                        <img class="object-none" src="./img/ill_wind.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Jump up, performing a spinning slice. (Usable while airborne.)
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
                         <span>Increscent Slash</span>
                         <img class="object-none" src="./img/increscent_slash.png" alt="">
                     </div></td>
@@ -691,6 +774,26 @@
                     <td>376</td>
                     <td>
                         Step forward while rotating the body to perform a frontward slash.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Shimmering Sun</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span class="text-boss-skill">Thunderous Impact</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
                     </td>
                 </tr>
             </table>
